all requirements are done, added share, save, added express server

--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -2,7 +2,7 @@
 
 .homepage {
   min-height: 100vh;
-  margin-top: 2rem;
+  margin-top: 6rem;
 }
 
 .search-form {
@@ -68,5 +68,11 @@
       font-weight: 400;
       text-transform: none;
     }
+  }
+}
+
+.navbar {
+  &__grow {
+    flex-grow: 1;
   }
 }
