--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -46,6 +46,11 @@
     margin-bottom: .5rem;
   }
 
+  &__item-link {
+    color: inherit;
+    text-decoration: none;
+  }
+
   &__button {
     padding: 2px 10px;
 
